Import of LICHTKIND/Kephra-0.4.3_13 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_13
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_13.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -129,6 +129,8 @@
 			document = Kephra::Edit::Select::document()
 			to-block-begin = Kephra::Edit::Select::to_block_begin()
 			to-block-end = Kephra::Edit::Select::to_block_end()
+			toggle = Kephra::Edit::Select::toggle_simple()
+			content = Kephra::Edit::Select::toggle_content()
 		</select>
 		<search>
 			<attribute>
@@ -213,8 +215,6 @@
 			delete-all = Kephra::Edit::Marker::delete_all_bookmarks()
 		</bookmark>
 		<tool>
-			note = Kephra::App::Panel::Notepad::note()
-			note-selection = Kephra::App::Panel::Notepad::append_selection()
 			interpreter-run-document = Kephra::App::Panel::Output::run()
 			interpreter-stop-document = Kephra::App::Panel::Output::stop()
 			<output>
@@ -223,15 +223,19 @@
 				selection-dec = Kephra::App::Panel::Output::display_selection_dec()
 				selection-hex = Kephra::App::Panel::Output::display_selection_hex()
 			</output>
+			note = Kephra::App::Panel::Notepad::note()
+			note-selection = Kephra::App::Panel::Notepad::append_selection()
 			choose-color = Kephra::Dialog::choose_color()
+			insert-time-date = Kephra::Edit::Special::insert_time_date()
 			<perl>
-				insert-last-var = Kephra::Edit::insert_last_perl_var()
-				copy-string = Kephra::Edit::copy_surrounding_string()
+				insert-last-var = Kephra::Edit::Special::insert_last_perl_var()
+				copy-string = Kephra::Edit::Special::copy_surrounding_string()
 			</perl>
+			auto-indention = Kephra::App::EditPanel::switch_autoindention()
+			brace-indention = Kephra::App::EditPanel::switch_braceindention()
+			brace-completion = Kephra::App::EditPanel::switch_bracecompletion()
 		</tool>
 		<document>
-			auto-indention = Kephra::Document::Property::switch_autoindention()
-			brace-indention = Kephra::Document::Property::switch_braceindention()
 			<change>
 				back = Kephra::Document::Change::switch_back()
 				prev = Kephra::Document::Change::tab_left()
@@ -335,19 +339,27 @@
 				this-version = Kephra::Help::version_text()
 			</documentation>
 			<editpanel>
-				EOL = Kephra::App::EditPanel::switch_EOL_visibility()
-				brace-light = Kephra::App::EditPanel::switch_bracelight()
-				caret-line = Kephra::App::EditPanel::switch_caret_line_visibility()
-				font = Kephra::App::EditPanel::change_font()
-				indention-guide = Kephra::App::EditPanel::switch_indention_guide_visibility()
-				line-wrap = Kephra::App::EditPanel::switch_autowrap_mode()
-				right-margin = Kephra::App::EditPanel::switch_LLI_visibility()
-				whitespace = Kephra::App::EditPanel::switch_whitespace_visibility()
 				<contextmenu>
 					custom = Kephra::App::EditPanel::set_contextmenu('custom')
 					no = Kephra::App::EditPanel::set_contextmenu('none')
 					default = Kephra::App::EditPanel::set_contextmenu('default')
 				</contextmenu>
+				<indicator>
+					EOL = Kephra::App::EditPanel::Indicator::switch_EOL_visibility()
+					brace-light = Kephra::App::EditPanel::Indicator::switch_bracelight()
+					caret-line = Kephra::App::EditPanel::Indicator::switch_caret_line_visibility()
+					indention-guide = Kephra::App::EditPanel::Indicator::switch_indention_guide_visibility()
+					right-margin = Kephra::App::EditPanel::Indicator::switch_LLI_visibility()
+					whitespace = Kephra::App::EditPanel::Indicator::switch_whitespace_visibility()
+				</indicator>
+				<fold-toggle>
+					all = Kephra::App::EditPanel::Fold::toggle_all()
+					here = Kephra::App::EditPanel::Fold::toggle_here()
+					level = Kephra::App::EditPanel::Fold::toggle_level()
+					recursively = Kephra::App::EditPanel::Fold::toggle_recursively()
+				</fold-toggle>
+				font = Kephra::App::EditPanel::change_font()
+				line-wrap = Kephra::App::EditPanel::switch_autowrap_mode()
 				<margin>
 					contexmenu = Kephra::App::EditPanel::Margin::switch_contextmenu_visibility()
 					text-fold = Kephra::App::EditPanel::Margin::switch_fold()
@@ -365,13 +377,12 @@
 						12 = Kephra::App::EditPanel::Margin::set_text_width(12)
 					</text>
 				</margin>
-				<fold-toggle>
-					all = Kephra::App::EditPanel::Fold::toggle_all()
-					here = Kephra::App::EditPanel::Fold::toggle_here()
-					level = Kephra::App::EditPanel::Fold::toggle_level()
-					recursively = Kephra::App::EditPanel::Fold::toggle_recursively()
-				</fold-toggle>
 				maximize = Kephra::App::Window::switch_max_editpanel_mode()
+				<zoom>
+					in = Kephra::App::EditPanel::zoom_in()
+					normal = Kephra::App::EditPanel::zoom_normal()
+					out = Kephra::App::EditPanel::zoom_out()
+				</zoom>
 			</editpanel>
 			<panel>
 				notepad = Kephra::App::Panel::Notepad::switch_visibility()
@@ -588,16 +599,19 @@
 				0 = Kephra::Edit::Marker::bookmark_is_set(0)
 			</goto>
 		</bookmark>
+		<tool>
+			auto-indention = Kephra::App::EditPanel::get_autoindention()
+			brace-indention = Kephra::App::EditPanel::get_braceindention()
+			brace-completion = Kephra::App::EditPanel::get_bracecompletion()
+		</tool>
 		<document>
-			auto-indention = Kephra::Document::Property::get_autoindention()
-			brace-indention = Kephra::Document::Property::get_braceindention()
 			<EOL>
 				cr+lf = Kephra::Document::Property::get_EOL_mode() eq 'cr+lf'
 				cr = Kephra::Document::Property::get_EOL_mode() eq 'cr'
 				lf = Kephra::Document::Property::get_EOL_mode() eq 'lf'
 			</EOL>
 			<encoding>
-				8bit = Kephra::Document::Property::get_codepage() eq '8bit'
+				ascii = Kephra::Document::Property::get_codepage() eq 'ascii'
 				utf8 = Kephra::Document::Property::get_codepage() eq 'utf8'
 			</encoding>
 			<readonly>
@@ -667,13 +681,15 @@
 		</document>
 		<view>
 			<editpanel>
-				EOL = Kephra::App::EditPanel::EOL_visible();
-				brace-light = Kephra::App::EditPanel::bracelight_visible()
-				caret-line = Kephra::App::EditPanel::caret_line_visible()
-				indention-guide = Kephra::App::EditPanel::indention_guide_visible()
 				line-wrap = Kephra::App::EditPanel::get_autowrap_mode()
-				right-margin = Kephra::App::EditPanel::LLI_visible()
-				whitespace = Kephra::App::EditPanel::whitespace_visible()
+				<indicator>
+					EOL = Kephra::App::EditPanel::Indicator::EOL_visible();
+					brace-light = Kephra::App::EditPanel::Indicator::bracelight_visible()
+					caret-line = Kephra::App::EditPanel::Indicator::caret_line_visible()
+					indention-guide = Kephra::App::EditPanel::Indicator::indention_guide_visible()
+					right-margin = Kephra::App::EditPanel::Indicator::LLI_visible()
+					whitespace = Kephra::App::EditPanel::Indicator::whitespace_visible()
+				</indicator>
 				<contextmenu>
 					custom = Kephra::App::EditPanel::get_contextmenu() eq 'custom'
 					no = Kephra::App::EditPanel::get_contextmenu() eq 'none'
@@ -840,8 +856,6 @@
 			replace = ctrl+w
 			delete = del
 			delete-tab = shift+back
-			copy-string = ctrl+alt+c
-			insert-last-perl-var = ctrl+shift+v
 			<line>
 				cut = ctrl+shift+x
 				copy = ctrl+shift+c
@@ -884,6 +898,8 @@
 		</edit>
 		<select>
 			document = ctrl+a
+			toggle = ctrl+y
+			content = ctrl+shift+y
 			to-block-begin = alt+shift+pgup
 			to-block-end = alt+shift+pgdn
 		</select>
@@ -951,8 +967,8 @@
 			</toggle>
 		</bookmark>
 		<tool>
-			note = f4
-			note-selection = shift+f4
+			note = f12
+			note-selection = shift+f12
 			interpreter-run-document = f5
 			interpreter-stop-document = shift+f5
 			output-selection-dec = ctrl+shift+f5
@@ -988,9 +1004,14 @@
 					recursively = ctrl+shift+plus
 				</fold-toggle>
 				maximize = shift+f11
+				<zoom>
+					in = ctrl+shift+plus
+					normal = ctrl+shift+sharp
+					out = ctrl+shift+minus
+				</zoom>
 			</editpanel>
 			menubar = ctrl+alt+m
-			panel-notepad = ctrl+f4
+			panel-notepad = ctrl+f12
 			panel-output = ctrl+f5
 			tabbar = ctrl+alt+t
 			<window>
