--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -4,7 +4,7 @@
 	iso_code = en
 	coding = ASCII
 	purpose = global localisation
-	version = 0.4.3.4
+	version = 0.4.3.13
 </about>
 <app>
 	<general>
@@ -21,6 +21,7 @@
 			edit = Edit
 			edit_changes = History
 			current_line = Line
+			select = Select
 			selection = Selection
 			selection_format = Format
 			selection_comment = Comment
@@ -59,6 +60,7 @@
 			view_editpanel_contexmenu = Edit Panel
 			view_textmargin = Text Margin
 			view_text_fold = Folding
+			view_zoom = Zoom
 			config = Config
 			config_app_lang = Language
 			config_global = Global Config File
@@ -225,8 +227,8 @@
 		</edit>
 		<select>
 			document = Select All
-			to-block-begin =
-			to-block-end =
+			toggle = Toggle
+			content = Item
 		</select>
 		<search>
 			<attribute>
@@ -251,7 +253,6 @@
 			first = Find First
 			last = Find Last
 			selection = Find Selection
-			mark-all = Mark all Matches
 		</find>
 		<replace>
 			prev = Replace Backward
@@ -313,14 +314,16 @@
 				selection-hex = Selection in Hex
 			</output>
 			choose-color = Color Picker
+			insert-time-date = Time Date
 			<perl>
 				insert-last-var = Insert Var
 				copy-string = Copy String
 			</perl>
-		</tool>
-		<document>
 			auto-indention = Autoindention
 			brace-indention = Braceindention
+			brace-completion = Bracecompletion
+		</tool>
+		<document>
 			<EOL>
 				auto = Align
 				cr+lf = CR+LF (Windows)
@@ -424,9 +427,19 @@
 				this-version = This Version
 			</documentation>
 			<editpanel>
-				EOL = Lineend Marker
-				caret-line = Caret Line
-				brace-light = Bracelight
+				<contextmenu>
+					custom = Custom
+					default = Default
+					no = No Menu
+				</contextmenu>
+				<indicator>
+					EOL = Lineend Marker
+					caret-line = Caret Line
+					brace-light = Bracelight
+					indention-guide = Indention Guide
+					right-margin = Right Margin
+					whitespace = Whitespace
+				</indicator>
 				<fold-toggle>
 					all = All
 					here = Here
@@ -434,15 +447,7 @@
 					recursively = Recursively
 				</fold-toggle>
 				font = Font
-				indention-guide = Indention Guide
 				line-wrap = Line Wrap
-				right-margin = Right Margin
-				whitespace = Whitespace
-				<contextmenu>
-					custom = Custom
-					default = Default
-					no = No Menu
-				</contextmenu>
 				<margin>
 					contexmenu = Left Margin
 					marker = Marker Margin
@@ -461,6 +466,11 @@
 					</text>
 				</margin>
 				maximize = Maximize Editpanel
+				<zoom>
+					in = Zoom In
+					normal = Normal
+					out = Zoom Out
+				</zoom>
 			</editpanel>
 			<panel>
 				notepad = Notepad
@@ -688,8 +698,8 @@
 		</edit>
 		<select>
 			document = select entire document
-			to-block-begin =
-			to-block-end =
+			toggle = toggle between selectin a word, a line, a block or nothing
+			content = toggle selection between contents of braces or quotings
 		</select>
 		<search>
 			<attribute>
@@ -774,15 +784,17 @@
 				selection-dec = display selected text in decimal coding in the ouput panel
 				selection-hex = display selected text in hexadecimal coding in the ouput panel
 			</output>
+			choose-color = display text selection as color and choose a new from a rainbow
+			insert-time-date = insert at cursor current time and date
 			<perl>
 				insert-last-var = insert last Perl variable that began a line
 				copy-string = copy surrounding single or double quoted string
 			</perl>
-			choose-color = display text selection as color and choose a new from a rainbow
+			auto-indention = indents new line like previous when Enter pressed 
+			brace-indention = autoindents one tab more after curly braces when press enter
+			brace-completion = creates the closing brace when press enter after the opening
 		</tool>
 		<document>
-			auto-indention = indents new line like previous when Enter pressed 
-			brace-indention = obey right indention after curly braces when press enter
 			<EOL>
 				auto = make all line endings like in first line
 				cr+lf = line endings for Windows or Dos
@@ -832,14 +844,14 @@
 				java = Settings for Sun's Java language
 				js = syntaxmode for Javascript
 				latex = syntaxmode for the LaTeX Tex macros
-				lisp = LISt Prozessor settings
+				lisp = LISt Processor settings
 				lua = syntaxmode for the embedding language Lua 
 				make = highlighting for make tool scripts
 				matlab = MATLAB scripting language
 				nsis = language of the Nullsoft Scriptable Install System
 				pascal = Niklaus Wirth's structured language Pascal
 				perl = syntaxmode for Larry Walls Perl
-				php = Rasmus Lehrdorf PHP Hypertext Prozessors
+				php = Rasmus Lehrdorf PHP Hypertext Processors
 				property = Highlighting for simple config files
 				ps = Adobe's document desciption language Postscript
 				python = Guido van Rossums dynamic language Python 
@@ -886,9 +898,19 @@
 				this-version = new features and important changes of the current version
 			</documentation>
 			<editpanel>
-				EOL = switch visibility of the end of line marker
-				caret-line = highlights row where caret(textcursor) is located
-				brace-light = highlights associated pairs of braices
+				<contextmenu>
+					custom = activate customizable editpanel context menu
+					default = activate default scintilla context menu
+					no = deactivate all editpanel context menu
+				</contextmenu>
+				<indicator>
+					EOL = switch visibility of the end of line marker
+					caret-line = highlights row where caret(textcursor) is located
+					brace-light = highlights associated pairs of braices
+					indention-guide = vertical dotted lines in intervals of tab width
+					right-margin = shows straight vertical line on seleted width
+					whitespace = set whitespaces and tabs visible as dots and arrows
+				</indicator>
 				<fold-toggle>
 					all = fold or unfold all visible and not visible nodes
 					here = fold or unfold only the node on selected position
@@ -896,15 +918,7 @@
 					recursively = fold or unfold this and all nodes below in hierarchy
 				</fold-toggle>
 				font = change font family, size, style etc.
-				indention-guide = vertical dotted lines in intervals of tab width
 				line-wrap = breaks long lines on window edge only visually
-				right-margin = shows straight vertical line on seleted width
-				whitespace = set whitespaces and tabs visible as dots and arrows
-				<contextmenu>
-					custom = aktivate customizable editpanel context menu
-					default = aktivate default scintilla context menu
-					no = deaktivate all editpanel context menu
-				</contextmenu>
 				<margin>
 					contexmenu = enable or disable the context menu over the margin, left of the edit panel
 					marker = margin for bookmarks, marker, debug steps ...
@@ -923,6 +937,11 @@
 					</text>
 				</margin>
 				maximize = toggle all panels and bars to enlarge the edit area
+				<zoom>
+					in = make text appear larger
+					normal = zoom text back to font settings
+					out = make text appear smaller
+				</zoom>
 			</editpanel>
 			<panel>
 				notepad = switch visibility of the Notepad panel
@@ -999,14 +1018,14 @@
 					java = open settings for Sun's Java language
 					js = open syntaxmode for Javascript
 					latex = open syntaxmode for the Tex macros named LaTeX 
-					lisp = open settings for the almighty LISt Prozessor 
+					lisp = open settings for the almighty LISt Processor 
 					lua = settings for the extension language Lua 
 					make = highlighting for make tool scripts
 					matlab = MATLAB scripting language
 					nsis =  language of the Nullsoft Scriptable Install System
 					pascal = settings for Niklaus Wirth's procedural language Pascal
 					perl = file with syntaxmode for Larry Walls Perl
-					php = Rasmus Lehrdorf PHP Hypertext Prozessor
+					php = Rasmus Lehrdorf PHP Hypertext Processor
 					property = Highlighting for simple config files
 					ps = Adobe document description language Postscript
 					python = Guido van Rossums dynamic language Python
