Import of LICHTKIND/Kephra-0.4.3_14 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_14
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_14.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -129,8 +129,8 @@
 			document = Kephra::Edit::Select::document()
 			to-block-begin = Kephra::Edit::Select::to_block_begin()
 			to-block-end = Kephra::Edit::Select::to_block_end()
-			toggle = Kephra::Edit::Select::toggle_simple()
-			content = Kephra::Edit::Select::toggle_content()
+			toggle-simple = Kephra::Edit::Select::toggle_simple()
+			toggle-content = Kephra::Edit::Select::toggle_content()
 		</select>
 		<search>
 			<attribute>
@@ -898,8 +898,8 @@
 		</edit>
 		<select>
 			document = ctrl+a
-			toggle = ctrl+y
-			content = ctrl+shift+y
+			toggle-simple = ctrl+y
+			toggle-content = ctrl+shift+y
 			to-block-begin = alt+shift+pgup
 			to-block-end = alt+shift+pgdn
 		</select>
