--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -4,7 +4,7 @@
 	iso_code = en
 	coding = ASCII
 	purpose = global localisation
-	version = 0.4.3.13
+	version = 0.4.3.14
 </about>
 <app>
 	<general>
@@ -227,8 +227,8 @@
 		</edit>
 		<select>
 			document = Select All
-			toggle = Toggle
-			content = Item
+			toggle-simple = Toggle
+			toggle-content = Item
 		</select>
 		<search>
 			<attribute>
@@ -698,8 +698,8 @@
 		</edit>
 		<select>
 			document = select entire document
-			toggle = toggle between selectin a word, a line, a block or nothing
-			content = toggle selection between contents of braces or quotings
+			toggle-simple = toggle between selectin a word, a line, a block or nothing
+			toggle-content = toggle selection between contents of braces or quotings
 		</select>
 		<search>
 			<attribute>
@@ -716,7 +716,7 @@
 				selection = search and replace only within selected text
 				document = search and replace in whole current document
 				open-docs = search and replace in all open documents
-			</range>
+			</range><select>
 		</search>
 		<find>
 			prev = find the previous match of the textsearch
