--- a/share/config/localisation/romana.conf
+++ b/share/config/localisation/romana.conf
@@ -227,8 +227,8 @@
 		</edit>
 		<select>
 			document = Selectează tot
-			toggle = Comută
-			content = Articol
+			toggle-simple = Comută
+			toggle-content = Articol
 		</select>
 		<search>
 			<attribute>
@@ -699,8 +699,8 @@
 		</edit>
 		<select>
 			document = selectează tot documentul
-			toggle = comută între a selecta un cuvânt, o linie, un bloc sau nimic
-			content = comută selecția între conținutul parantezelor sau ghilimelelor
+			toggle-simple = comută între a selecta un cuvânt, o linie, un bloc sau nimic
+			toggle-content = comută selecția între conținutul parantezelor sau ghilimelelor
 		</select>
 		<search>
 			<attribute>
