--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -84,9 +84,9 @@ full_menubar:
           - item edit-line-move-page-down
       -
         menu select:
-          - item select-toggle
-          - item select-content
           - item select-document
+          - item select-toggle-simple
+          - item select-toggle-content
       -
         menu selection:
           - item edit-selection-move-char-left
