--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -875,6 +875,7 @@
 				<comment>
 					add-perl = ctrl+k
 					del-perl = ctrl+shift+k
+					toggle-perl = ctrl+alt+k
 					add-xml = ctrl+i
 					del-xml = ctrl+shift+i
 				</comment>
