--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -111,7 +111,7 @@
 			reload = Reload
 			reload-all = Reload All
 			rename = Rename ...
-			insert = Insert From ...
+			insert = Insert From File ...
 			<save>
 				current = Save
 				all = Save All
@@ -201,7 +201,7 @@
 					dedent-char = Dedent Space
 					indent-tab = Indent Tab
 					dedent-tab = Dedent Tab
-					del-trailing-whitespace = Delete Trailing Space
+					del-trailing-whitespace = Trim Trailing Whitespace
 					join-lines = Join Lines
 				</format>
 				<move>
@@ -221,7 +221,7 @@
 					tabs2spaces = Tabs 2 Whitespace
 				</convert>
 				<format>
-					del-trailing-whitespace = Delete Trailing
+					del-trailing-whitespace = Trim Trailing Whitepace
 				</format>
 			</document>
 		</edit>
