Import of LICHTKIND/Kephra-0.4.3_21 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_21
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_21.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/contextmenus.yml
+++ b/share/config/interface/contextmenus.yml
@@ -25,6 +25,8 @@ textselection_contextmenu:
   - item replace-selection
   - item tool-note-selection
   -
+  - item edit-selection-comment-toggle-perl
+  -
   - item edit-selection-convert-uppercase
   - item edit-selection-convert-lowercase
 
