Import of LICHTKIND/Kephra-0.4.3.30 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3.30
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3.30.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/global/data/search.yml
+++ b/share/config/global/data/search.yml
@@ -1,8 +1,20 @@
 ---
 bookmark: {}
 find:
-  history: []
-  item: ''
+  history:
+    - add
+    - GetDataHere
+    - Knopfdruck
+    - EVT_TOOL
+    - abgefangen
+    - '$img'
+    - auslösen
+    - einigen
+    - manch
+    - muss
+    - betätig
+    - betätigen
+  item: add
 replace:
   history: []
   item: ''
