--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 ---
 # http://module-build.sourceforge.net/META-spec.html
 name:         Kephra
-version:      0.4.3.29
+version:      0.4.3.30
 abstract:     crossplatform, GUI-Texteditor along Perl alike Paradigms 
-distribution_type: script
+distribution_type: module
 author:       Herbert Breunung <lichtkind@cpan.org>
-license:      gpl
+license:      gpl_2
 build_requires:
   Wx: 0.74
   Test::More: 0.47
