Import of LICHTKIND/Kephra-0.4.3.33 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3.33
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3.33.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/global/data/search.yml
+++ b/share/config/global/data/search.yml
@@ -2,19 +2,20 @@
 bookmark: {}
 find:
   history:
-    - speicher_suchbegriffe
-    - _suchbegriffe
-    - lade_eigene_suchbegriffe
-    - '$suchlisten'
-    - ' ..'
-    - checkfilter
-    - check_only_3
-    - '$worteingabe'
-    - wort
-    - zeichne_komplett
-    - '$help_msg'
-    - eingabefilter
-  item: speicher_suchbegriffe
+    - That
+    - '$row2'
+    - '$kundenmail'
+    - vorgestellt
+    - static
+    - Panel
+    - 'man '
+    - Verständnis
+    - gespräch
+    - auch
+    - welche
+    - nur
+  item: exci
 replace:
-  history: []
-  item: ''
+  history:
+    - "<br>\n"
+  item: "<br>\n"
